--- a/product/templates/product/partials/product_list_item.html
+++ b/product/templates/product/partials/product_list_item.html
@@ -1,6 +1,6 @@
 <div class="w-full md:w-1/3 xl:w-1/4 p-6">
     <a href="{% url 'product' product.slug %}">
-        <img class="rounded-xl hover:shadow-lg" src="C:\Users\Mauricio_AG\Downloads\FlexStart\assets\img\portfolio\app-1.jpg" alt="">
+        <img srcset="{{ product.get_thumbnail }}" class="rounded-xl hover:shadow-lg" src="C:\Users\Mauricio_AG\Downloads\FlexStart\assets\img\portfolio\app-1.jpg" alt="">
     </a>
     <div class="pt-3 flex items-center justify-between ">
         <a href="{% url 'product' product.slug %}" class="font-semibold">{{product.name}}</a>
