--- a/product/templates/product/product.html
+++ b/product/templates/product/product.html
@@ -3,7 +3,7 @@
 
 <div class="max-w-6xl mx-auto flex flex-wrap py-6 px-6 xl:px-0">
     <div class="images w-full mb-6 lg:mb-0 lg:w-3/5">
-        <img class="rounded-xl" src="1.jpg" alt="Image">
+        <img class="rounded-xl" src="{{product.image.url}}" alt="Image">
     </div>
 
     <div class="information w-full lg:w-2/5 lg:p-6">
@@ -15,7 +15,13 @@
                 {{product.description}}
             </p>
         {% endif %}
-        <a href="#" class="mt-6 inline-block px-8 py-4 rounded-xl bg-purple-500 text-white hover:bg-purple-700">
+        <a 
+            href="#" 
+            class="mt-6 inline-block px-8 py-4 rounded-xl bg-purple-500 text-white hover:bg-purple-700"
+            hx-get="{% url 'add_to_cart' product.id %}"    
+            hx-target="#menu-cart-button"
+            hx-swap="outerHTML"
+        >
             Add to cart
         </a>
     </div>
