--- a/core/templates/core/myaccount.html
+++ b/core/templates/core/myaccount.html
@@ -15,69 +15,37 @@
     <hr>
 
     <h2 class="my-6 text-xl">My Orders</h2>
-
-    <div class="w-full mb-6 p-6 flex flex-wrap bg-gray-100 rounded-xl" >
-        <div class="mb-6 flex justify-between">
-            <a href="#">Order  id: 1</a>
-
-        </div>
-        <div class="mb-6 w-full">
-            <div class="product mb-6 flex pr-6">
-                <a href="#" class="w-1/4">
-                    <img class="hover:shadow-lg rounded-xl" src="1.jpg">
-                </a>
-                <div class="w-3/4 pl-6">
-                    <div class="flex justify-between">
-                        <a href="#" class="text-lg">Product name: </a>
-                        <p class="mb-6 pt-1 text-gray-400">$9.99</p>
-                    </div>
-
-                    <hr>
-
-                    <div class="mt-6">
-                        Quantiry: 1
-                    </div>
-                </div>
+    {% for order in request.user.orders.all %}
+        <div class="w-full mb-6 p-6 flex flex-wrap bg-gray-100 rounded-xl" >
+            <div class="mb-6 flex justify-between">
+                <a href="#">Order  id: {{ order.id }}</a>
             </div>
-            <div class="product mb-6 flex pr-6">
-                <a href="#" class="w-1/4">
-                    <img class="hover:shadow-lg rounded-xl" src="1.jpg">
-                </a>
-                <div class="w-3/4 pl-6">
-                    <div class="flex justify-between">
-                        <a href="#" class="text-lg">Product name: </a>
-                        <p class="mb-6 pt-1 text-gray-400">$9.99</p>
-                    </div>
+            <div class="mb-6 w-full">
+                {% for item in order.items.all %}
+                    <div class="product mb-6 flex pr-6">
+                        <a href="#" class="w-1/4">
+                            <img class="hover:shadow-lg rounded-xl" src="{{ item.product.get_thumbnail }}">
+                        </a>
+                        <div class="w-3/4 pl-6">
+                            <div class="flex justify-between">
+                                <a href="#" class="text-lg">{{ item.product.name }}</a>
+                                <p class="mb-6 pt-1 text-gray-400">${{ item.product.price }}</p>
+                            </div>
 
-                    <hr>
+                            <hr>
 
-                    <div class="mt-6">
-                        Quantiry: 1
+                            <div class="mt-6">
+                                Quantiry: {{ item.quantity }}
+                            </div>
+                        </div>
                     </div>
-                </div>
+                {% endfor %}
             </div>
-            <div class="product mb-6 flex pr-6">
-                <a href="#" class="w-1/4">
-                    <img class="hover:shadow-lg rounded-xl" src="1.jpg">
-                </a>
-                <div class="w-3/4 pl-6">
-                    <div class="flex justify-between">
-                        <a href="#" class="text-lg">Product name: </a>
-                        <p class="mb-6 pt-1 text-gray-400">$9.99</p>
-                    </div>
-
-                    <hr>
-
-                    <div class="mt-6">
-                        Quantiry: 1
-                    </div>
-                </div>
+            <div>
+                <p class="text-lg"><strong>Date:</strong> {{ order.created_at }} </p>
+                <p class="text-lg"><strong>Total:</strong> $199</p>
             </div>
         </div>
-        <div>
-            <p class="text-lg"><strong>Date:</strong> 04:04:2022</p>
-            <p class="text-lg"><strong>Total:</strong> $199</p>
-        </div>
-    </div>
+    {% endfor %}
 </div>
 {% endblock %}
